--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <mat-divider [vertical]="true"></mat-divider>
     <button mat-button>Home</button>
     <div class="right-nav">
-        <button mat-button>Contact Us</button>
+        <button mat-button>Contact Me</button>
     </div>
   </mat-toolbar-row>
 
