--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,14 @@
-<mat-toolbar color="primary" class="nav" role="heading">
-  <mat-toolbar-row>
-    <button mat-button>Home</button>
-    <a mat-button>Home</a>
-    <mat-divider [vertical]="true"></mat-divider>
-    <button mat-button>Home</button>
-    <div class="right-nav">
-        <button mat-button>Contact Us</button>
-    </div>
-  </mat-toolbar-row>
 
-  <!-- <mat-toolbar-row>
-      <span>Second Row</span>
-    </mat-toolbar-row> -->
-</mat-toolbar>
+
+<!-- <mat-sidenav-container class="example-container">
+  <mat-sidenav mode="side" [opened]="isOpen">Sidenav content</mat-sidenav>
+  <mat-sidenav-content>Main content</mat-sidenav-content>
+</mat-sidenav-container>  -->
+
+<div class="layout">
+    <app-header></app-header>
+    <div class="app-container" >
+      <p style="height:2000px"></p>
+    </div>
+    <app-footer></app-footer>
+</div>
