--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-html,body{
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "./assets/material-icon/material-icon.css";
+html, body {
     margin: 0;
+    height: 100%;
+}
+
+html {
+    
 }
