--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,10 @@
 html, body {
     margin: 0;
     height: 100%;
+    /* overflow:hidden  */
 }
-
-html {
-    
+@media (min-width:1025px){
+    html, body {
+        overflow:hidden 
+    }
 }
