--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,5 @@
   <mat-sidenav-content>Main content</mat-sidenav-content>
 </mat-sidenav-container>  -->
 
-<div class="layout">
-    <app-header></app-header>
-    <div class="app-container" >
-      <p style="height:2000px"></p>
-    </div>
-    <app-footer></app-footer>
-</div>
+
+<router-outlet> </router-outlet>
