--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -3,3 +3,19 @@
 <p>
   posts works!
 </p>
+<mat-list>
+  <h3 mat-subheader>Folders</h3>
+  <mat-list-item *ngFor="let folder of folders; last as last">
+     <mat-icon mat-list-icon>folder</mat-icon>
+     <h4 mat-line>{{folder.name}}</h4>
+     <p mat-line class="demo-2"> {{folder.updated}} </p>
+     <mat-divider [inset]="true" *ngIf="!last"></mat-divider>
+  </mat-list-item>
+  <mat-divider></mat-divider>
+  <h3 mat-subheader>Notes</h3>
+  <mat-list-item *ngFor="let note of notes">
+     <mat-icon mat-list-icon>note</mat-icon>
+     <h4 mat-line>{{note.name}}</h4>
+     <p mat-line class="demo-2"> {{note.updated}} </p>
+  </mat-list-item>
+</mat-list>
