--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-
-
 <!-- <mat-sidenav-container class="example-container">
   <mat-sidenav mode="side" [opened]="isOpen">Sidenav content</mat-sidenav>
   <mat-sidenav-content>Main content</mat-sidenav-content>
 </mat-sidenav-container>  -->
 
-
-<router-outlet > </router-outlet>
+<!-- <img src="./assets/angular.png" alt="logo" /> -->
+<router-outlet> </router-outlet>
